# open-agent-manager-workspace

./: .gitignore  .gitmodules  CLAUDE.md  SPECIFY.md  convert.js  index.html  package-lock.json  package.json
.claude/: .gitignore  Makefile  settings.json
.claude/.sidecar/: activity.jsonl
.claude/plans/: wild-juggling-brooks.md
.github/workflows/: release.yml
app/: .gitignore  SPECIFY.md  index.html  package-lock.json  package.json
app/data/: projects.json
app/sandbox/: README.md  (+22 more)
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: cmdop_bridge.py  lib.rs  main.rs  projects.rs  servers.rs  ssh.rs
data/: projects.json
docs/: README.md  architecture.md  configuration.md  features.md  getting-started.md  release.md  terminal-resize.md
sandbox/: package-lock.json  package.json  test-agent-deep.py  test-core-http.js  test-files-agent.py  test-grpc-stream.py  test-jwt-endpoints.js  test-ls2.py  test-node-agent.js  test-node-cjs.js  test-oauth-correct.js  test-oauth-device.js  test-oauth-get-jwt.js  test-python-full.py  test-react-api.js  test-websocket.js  test-ws-direct.js  test_python_async.py  test_python_stream.py
scripts/: release.sh
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmdop.rs  cmdop_bridge.py  lib.rs  main.rs  projects.rs  prompts.rs  ssh.rs  tasks.rs
website/: package-lock.json  package.json  tailwind.config.js
(+39 files in other folders)
