[package]
name = "ccam"
version = "0.1.0"
description = "Claude Code Agent Manager"
authors = ["suenot"]
edition = "2021"

[lib]
name = "ccam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-pty = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
