[package]
name = "open-agent-manager"
version = "0.1.0"
description = "Open Agent Manager"
authors = ["suenot"]
edition = "2021"

[lib]
name = "open_agent_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-pty = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.7"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"

